--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && pm2 restart npm --name next-app || pm2 start npm --name next-app -- start",
+    "stop": "pm2 stop next-app",
+    "start-pm2": "pm2 start npm --name next-app -- start && pm2 save && pm2 startup"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
@@ -35,6 +38,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "pm2": "^6.0.8",
     "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
